// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component Should render 1`] = `
<View
  style={
    Object {
      "alignSelf": null,
      "backgroundColor": null,
      "flexDirection": "row",
      "justifyContent": null,
      "width": null,
    }
  }
/>
`;

exports[`Row component Should render with childs 1`] = `
<View
  style={
    Object {
      "alignSelf": null,
      "backgroundColor": null,
      "flexDirection": "row",
      "justifyContent": null,
      "width": null,
    }
  }
>
  <View />
  <View />
  <View />
  <View />
</View>
`;

exports[`Row component Should render with style 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "backgroundColor": "red",
      "flexDirection": "row",
      "justifyContent": null,
      "width": null,
    }
  }
/>
`;
